--- a/webapp/nginx/default.conf
+++ b/webapp/nginx/default.conf
@@ -1,9 +1,15 @@
 server {
- listen 80;
- server_name localhost;
- root /usr/share/nginx/html;
- index index.html index.htm;
-location / {
- try_files $uri $uri/ /index.html;
- }
+    listen 80;
+    server_name localhost;
+
+    # Chemin vers le répertoire racine de votre application
+    root /usr/share/nginx/html;
+
+    # Fichiers d'index par défaut
+    index index.html index.htm;
+
+    location / {
+        # Essaie de servir les fichiers demandés ou redirige vers index.html
+        try_files $uri $uri/ /index.html;
+    }
 }
